YOR-71 Updated the dashboard to be able to display feedback messages for an entry and ability to be able to delete all feedback messages

--- a/dashboard/src/main/resources/dashboard-client/app/views/nameentry.directive.template.html
+++ b/dashboard/src/main/resources/dashboard-client/app/views/nameentry.directive.template.html
@@ -116,5 +116,10 @@
                 </li>
             </ul>
         </div>
+
+      <!-- Feedback-->
+      <!-- TODO have a better ui for the feedback. popup? -->
+      <feedback name="{{ formEntry.name }}"></feedback>
+
     </div>
 </div>
