--- a/website/src/main/resources/website/searchcomponent.hbs
+++ b/website/src/main/resources/website/searchcomponent.hbs
@@ -3,6 +3,6 @@
 	    <input type="text" class="form-control th this-query" id="keyboard" name="searchname" placeholder="{{message "lang.search-plchol"}}" autocomplete="off" spellcheck="false">
 	    <i class="fa fa-keyboard-o" id="keyboardp" data-toggle="tooltip" data-placement="top" title="{{message "lang.kybtitle"}}"></i>
 	    <!-- <p class="jtext"><a href="#"><i class="fa fa-search-plus"> {{message "lang.adv-search"}} </i></a></p> -->
-	    <button class="btn btn-search" type="button"><i class="fa fa-search"></i></button>
+	    <button class="btn btn-search" type="submit"><i class="fa fa-search"></i></button>
 	</div><br /><!-- /input-group -->                
 </form>
