--- a/website/src/main/resources/website/submitname.hbs
+++ b/website/src/main/resources/website/submitname.hbs
@@ -20,38 +20,7 @@
             <div style="display: none" id="error-msg" class="alert alert-danger" role="alert">{{message "lang.submitname.nameexists"}}.
                 <a id="view-entry">{{message "lang.submitname.viewentry"}}</a></div>
 
-            <form id="suggest-form">
-                <div class="form-group">
-                    <h5>{{message "lang.submitname.entername"}}: (required)</h5>
-                    <input type="text" name="suggestedName" class="form-control" id="suggestedName" placeholder="Suggested name">
-                </div>
-
-                <div class="form-group">
-                    <h5>{{message "lang.submitname.entermeaning"}}: (optional)</h5>
-                    <textarea name="suggestedMeaning" id="suggestedMeaning" class="form-control" rows="3"></textarea>
-                </div>
-
-                <div class="form-group">
-                    <h5>{{message "lang.submitname.enterlocation"}}: (optional)</h5>
-                    <select name="suggestedGeoLocation" id="suggestedGeoLocation" class="form-control">
-                        {{#each geoLocations}}
-                            <option>{{this.place}}</option>
-                        {{/each}}
-                    </select>
-                </div>
-
-                <!--Uncomment when TTS is implemented<div class="form-group">-->
-                <!--<h5>Please help us pronounce the new name:(optional)</h5>-->
-                <!--<input type="file" id="pronunciation">-->
-                <!--</div>-->
-
-                <div class="form-group">
-                    <h5>{{message "lang.submitname.enteremail"}}: (required)</h5>
-                    <input type="email" name="suggestedEmail" class="form-control" id="suggestedEmail" placeholder="Your email">
-                </div>
-
-                <button type="submit" id="submit-name" class="btn btn-info btn-lg">Submit new name</button>
-            </form>
+            {{> submitnameform }}
         </div>
     </div>
 
