FE-12 Updated front-end pages to support HTML5 semantics. This will enable search engines to properly locate contents on the site.

--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -1,10 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta charset="UTF-8" name="generator, viewport" content="YorubaName, width=device-width, initial-scale=1, maximum-scale=1" />
 <title>{{ title }} - YorubaName</title>
-<meta name="generator" content="YorubaName" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="/assets/img/favicon.png" rel="shortcut icon">
 <link href="/assets/css/bootstrap.css" rel="stylesheet">
 <link href="/assets/css/styles.css" rel="stylesheet">
@@ -27,7 +25,7 @@
 
 <body>
 	<!-- Header -->
-    <div class="header">
+    <header class="header">
     	<div class="container">
             <div id="layout-nav" class="navbar navbar-default" role="navigation">
                 <div class="navbar-header">
@@ -59,7 +57,7 @@
                 </div>
             </div>                    
    		</div>
-   </div>
+   </header>
    <!-- /header -->
 
 
