--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -1,73 +1,79 @@
 <!-- Header -->
 {{> header }}
 
-<!-- main-content -->
-<div class="jumbotron" id="home-banner">
-   <div class="container" align="center">
-   		<h1>{{message "lang.jumbotron1"}} <span class="y-color">10,000</span> {{message "lang.jumbotron2"}}</h1>
-   		
-        {{> searchcomponent }}
-        
-        <h3>{{message "lang.jumboh31"}} <br /> <a href="/submitname">{{message "lang.jumboh32"}}</a></h3>
-   </div>
-</div>
+<section id="searchform">
+    <div class="jumbotron" id="home-banner">
+       <div class="container" align="center">
+       		<h1>{{message "lang.jumbotron1"}} <span class="y-color">10,000</span> {{message "lang.jumbotron2"}}</h1>
+       		
+            {{> searchcomponent }}
+            
+            <h3>{{message "lang.jumboh31"}} <br /> <a href="/submitname">{{message "lang.jumboh32"}}</a></h3>
+       </div>
+    </div>
+</section>
 <!-- /search -->
 
-<div class="container">
+<section>
+    <div class="container">
 		<div class="llm">
-    	<div class="row">
-        	<div class="col-md-4 llm-box">              	
-                <ul>
-                    <li><h5 class="pri-color">{{message "lang.latest-search"}}</h5></li>
-                    <hr />
-                    {{#each latestSearches}}
-                        <li><a href="/entries/{{this}}">{{this}}</a></li>
-                    {{/each}}
-                </ul>
-            </div>
-            <div class="col-md-4 llm-box">
-                <ul>
-                    <li><h5 class="pri-color">{{message "lang.latest-add"}}</h5></li>
-                    <hr />
-                    {{#each latestAdditions}}
-                        <li><a href="/entries/{{this}}">{{this}}</a></li>
-                    {{/each}}
-                </ul>
-            </div>
-            <div class="col-md-4 llm-box">
-            	<ul>
-                    <li><h5 class="pri-color">{{message "lang.most-popular"}}</h5></li>
-                    <hr />
-                    {{#each mostPopular}}
-                        <li><a href="/entries/{{this}}">{{this}}</a></li>
-                    {{/each}}
-                </ul>
+        	<div class="row">
+            	<div class="col-md-4 llm-box">              	
+                    <ul>
+                        <li><h5 class="pri-color">{{message "lang.latest-search"}}</h5></li>
+                        <hr />
+                        {{#each latestSearches}}
+                            <li><a href="/entries/{{this}}">{{this}}</a></li>
+                        {{/each}}
+                    </ul>
+                </div>
+                <div class="col-md-4 llm-box">
+                    <ul>
+                        <li><h5 class="pri-color">{{message "lang.latest-add"}}</h5></li>
+                        <hr />
+                        {{#each latestAdditions}}
+                            <li><a href="/entries/{{this}}">{{this}}</a></li>
+                        {{/each}}
+                    </ul>
+                </div>
+                <div class="col-md-4 llm-box">
+                	<ul>
+                        <li><h5 class="pri-color">{{message "lang.most-popular"}}</h5></li>
+                        <hr />
+                        {{#each mostPopular}}
+                            <li><a href="/entries/{{this}}">{{this}}</a></li>
+                        {{/each}}
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- /llm -->
+    <!-- /llm -->
 
-<div class="container">
-	<div class="main-content">
-        <div class="row">
-            <div class="col-md-8 h-box">
-        		<h3>{{message "lang.name-of-day"}}</h3>
-                <hr />
-                <h4>Baratimileyi</h4>
-                <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
-        	</div>
+    <div class="container">
+    	<div class="main-content">
+            <div class="row">
+                <main>
+                    <div class="col-md-8 h-box">
+                		<h3>{{message "lang.name-of-day"}}</h3>
+                        <hr />
+                        <h4>Baratimileyi</h4>
+                        <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
+                	</div>
+                </main>
 
-            <!-- sidebar -->
-            <div class="col-md-4">
-        		{{> rsidebar }}
-        	</div> 
-            <!-- /sidebar -->  
-                                  
+                <!-- sidebar -->
+                <aside>
+                    <div class="col-md-4">
+                		{{> rsidebar }}
+                	</div>
+                </aside> 
+                <!-- /sidebar -->  
+                                      
+            </div>
         </div>
-    </div>
-</div>   
-<!-- /main-content -->
+    </div>   
+</section>
 
 <!-- footer -->
 {{> footer }}
