YOR-76 Added the ability to retrieve and play the generated TTS for a name on the website

--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -21,8 +21,8 @@
 						<div class="row">
 							<div class="col-sm-8">
 								<h2 class="name">
-								{{ name.name }} 
-								<button class="name-sound">
+								<span id="name-entry">{{ name.name }}</span>
+								<button class="name-sound" id="tts-button">
 									<i class="fa fa-volume-up" data-toggle="tooltip" data-placement="top" title="{{message "lang.play-sound"}}"></i>
 								</button>
 								</h2>										
