--- a/website/src/main/resources/website/footer.hbs
+++ b/website/src/main/resources/website/footer.hbs
@@ -5,6 +5,7 @@
 	    <p class="pull-right"><a href="/">{{message "lang.home"}}</a> | <a href="/about-us">{{message "lang.about"}}</a> | <a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story">{{message "lang.donate"}}</a> | <a href="http://blog.yorubaname.com/?page_id=1972">{{message "lang.volunteer"}}</a> | <a href="blog.yorubaname.com">{{message "lang.blog"}}</a> | <a href="/contact-us">{{message "lang.contact"}}</a></p>
 	  </div>
 	</div>
+	<div id="host" style="visibility: hidden; display: none">{{ host }}</div>
 </footer>
    
    
