--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -9,7 +9,7 @@
 <link href="/assets/css/jquery-ui.min.css" rel="stylesheet">
 <link href="/assets/css/keyboard.css" rel="stylesheet">
 <link href="/assets/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Josefin+Slab|ABeeZee|Glegoo|Pontano+Sans' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="http://fast.fonts.net/jsapi/6dc70f84-e724-4068-9f7a-797b1bf01ddb.js"></script>
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -24,10 +24,28 @@
 </head>
 
 <body>
+    <div class="preheader">
+        <div class="container">
+           <div class="row">
+               <div class="col-sm-8">
+                   <nav class="social-links">
+                        Follow the YorubaName project on
+                        <a href="https://www.facebook.com/YorubaNames"><i class="fa fa-facebook"></i></a>
+                        <a href="https://twitter.com/YorubaNames"><i class="fa fa-twitter"></i></a>
+                    </nav>
+               </div>
+               <div class="col-sm-4 text-right"><a class="btn btn-lg btn-primary" href="https://indeigogo.com/">Donate</a></div>
+           </div>
+        </div>
+    </div>
+
+        
+        
+    </div>
 	<!-- Header -->
-    <header class="header">
+    <header>
     	<div class="container">
-            <div id="layout-nav" class="navbar navbar-default" role="navigation">
+            <div id="layout-nav" class="navbar" role="navigation">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                         <span class="sr-only">Toggle navigation</span>
@@ -35,24 +53,17 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <h2><a class="logo" href="/"><img src="/assets/img/yoruba-dictionary-logo-b.png"  alt="YorubaName.com" title="YorubaName.com" /></a></h2>
+                    <div class="nav-brand"><a href="/"><img src="/assets/img/yoruba-dictionary-logo-b.png"  alt="YorubaName.com" title="YorubaName.com" /></a></div>
                 </div>                           
                 <div class="collapse navbar-collapse navbar-main-collapse">
                     <ul class="nav navbar-nav navbar-right">   
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle lang" data-toggle="dropdown"><i class="fa fa-list sec-color"></i> Menu<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">{{message "lang.home"}}</a></li>
-                                    <li><a href="#">{{message "lang.about"}}</a></li>
-                                    <li><a href="#">{{message "lang.donate"}}</a></li>
-                                    <li><a href="#">{{message "lang.volunteer"}}</a></li>
-                                    <li><a href="#">{{message "lang.blog"}}</a></li>
-                                    <li><a href="#">{{message "lang.logreg"}}</a></li>
-                                    <li><a href="#">{{message "lang.contact"}}</a></li>
-                                </ul>
-                        </li>
-                        <li class="social-icon"><a href="https://www.facebook.com/YorubaNames"><i class="fa fa-facebook"></i></a></li>
-                        <li class="social-icon"><a href="https://twitter.com/YorubaNames"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="/">{{message "lang.home"}}</a></li>
+                        <li><a href="/about">{{message "lang.about"}}</a></li>
+                        <li><a href="/donate">{{message "lang.donate"}}</a></li>
+                        <li><a href="/volunteer">{{message "lang.volunteer"}}</a></li>
+                        <li><a href="/blog">{{message "lang.blog"}}</a></li>
+                        <li><a href="/login">{{message "lang.logreg"}}</a></li>
+                        <li><a href="/contact">{{message "lang.contact"}}</a></li>
                     </ul>
                 </div>
             </div>                    
