--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -3,7 +3,7 @@
 
 <section id="searchform">
     <div class="jumbotron" id="home-banner">
-       <div class="container" align="center">
+       <div class="container">
        		<h1>{{message "lang.jumbotron1"}} <span class="y-color">10,000</span> {{message "lang.jumbotron2"}}</h1>
        		
             {{> searchcomponent }}
@@ -16,64 +16,104 @@
 
 <section>
     <div class="container">
-		<div class="llm">
-        	<div class="row">
-            	<div class="col-md-4 llm-box">              	
-                    <ul>
-                        <li><h5 class="pri-color">{{message "lang.latest-search"}}</h5></li>
-                        <hr />
-                        {{#each latestSearches}}
-                            <li><a href="/entries/{{this}}">{{this}}</a></li>
-                        {{/each}}
-                    </ul>
-                </div>
-                <div class="col-md-4 llm-box">
-                    <ul>
-                        <li><h5 class="pri-color">{{message "lang.latest-add"}}</h5></li>
-                        <hr />
-                        {{#each latestAdditions}}
-                            <li><a href="/entries/{{this}}">{{this}}</a></li>
-                        {{/each}}
-                    </ul>
-                </div>
-                <div class="col-md-4 llm-box">
-                	<ul>
-                        <li><h5 class="pri-color">{{message "lang.most-popular"}}</h5></li>
-                        <hr />
-                        {{#each mostPopular}}
-                            <li><a href="/entries/{{this}}">{{this}}</a></li>
-                        {{/each}}
-                    </ul>
-                </div>
+		
+    	<div class="llm row">
+        	<div class="col-sm-4 llm-box">              	
+                <ul>
+                    <li><h5 class="pri-color">{{message "lang.latest-search"}}</h5></li>
+                    <hr />
+                    {{#each latestSearches}}
+                        <li><a href="/entries/{{this}}">{{this}}</a></li>
+                    {{/each}}
+                </ul>
+            </div>
+            <div class="col-sm-4 llm-box">
+                <ul>
+                    <li><h5 class="pri-color">{{message "lang.latest-add"}}</h5></li>
+                    <hr />
+                    {{#each latestAdditions}}
+                        <li><a href="/entries/{{this}}">{{this}}</a></li>
+                    {{/each}}
+                </ul>
+            </div>
+            <div class="col-sm-4 llm-box">
+            	<ul>
+                    <li><h5 class="pri-color">{{message "lang.most-popular"}}</h5></li>
+                    <hr />
+                    {{#each mostPopular}}
+                        <li><a href="/entries/{{this}}">{{this}}</a></li>
+                    {{/each}}
+                </ul>
             </div>
         </div>
+        
     </div>
     <!-- /llm -->
 
     <div class="container">
-    	<div class="main-content">
+    	
             <div class="row">
-                <main>
-                    <div class="col-md-8 h-box">
-                		<h3>{{message "lang.name-of-day"}}</h3>
+                
+                    <div class="col-sm-4">
+                		<h5>{{message "lang.name-of-day"}}</h5>
+                        <hr />
+                        <h4><a href="">Baratimileyi</a></h4>
+                        <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
+                        <a href="">Read more</a>
+                	</div>
+
+                    <div class="col-sm-4">
+                        <h5>{{message "lang.name-of-day"}}</h5>
                         <hr />
                         <h4>Baratimileyi</h4>
                         <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
-                	</div>
-                </main>
 
-                <!-- sidebar -->
-                <aside>
-                    <div class="col-md-4">
-                		{{> rsidebar }}
-                	</div>
-                </aside> 
-                <!-- /sidebar -->  
+                    </div>
+
+                    <div class="col-sm-4">
+                        <h5>{{message "lang.name-of-day"}}</h5>
+                        <hr />
+                        <h4>Baratimileyi</h4>
+                        <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
+                    
+                    </div>
                                       
             </div>
-        </div>
-    </div>   
+
+            <div class="row">
+                <div class="col-sm-12 text-center"><h4>Our key supporters</h4></div>
+                <div class="col-sm-2">&nbsp;</div>
+                <div class="col-sm-2">&nbsp;</div>
+                <div class="col-sm-2">&nbsp;</div>
+                <div class="col-sm-2">&nbsp;</div>
+                <div class="col-sm-2">&nbsp;</div>
+                <div class="col-sm-2">&nbsp;</div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-4">&nbsp;</div>
+                <div class="col-sm-4">&nbsp;</div>
+                <div class="col-sm-4">
+                    <form class="" method="post">
+                        <h4>YorubaName Newsletter</h4>
+                        <div class="form-group">
+                            <input type="email" placeholder="Enter your email here" class="form-control">
+                            <button class="btn btn-default">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+    </div>
+
 </section>
+
+<!-- sidebar -->
+<!--aside>
+    <div class="col-sm-4">
+        {{> rsidebar }}
+    </div>
+</aside--> 
+<!-- /sidebar -->  
 
 <!-- footer -->
 {{> footer }}
