--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -27,9 +27,8 @@
     <div class="preheader">
         <div class="container">
            <div class="row">
-               <div class="col-sm-8">
+               <div class="col-sm-8">Follow the YorubaName project on
                    <nav class="social-links">
-                        Follow the YorubaName project on
                         <a href="https://www.facebook.com/YorubaNames"><i class="fa fa-facebook"></i></a>
                         <a href="https://twitter.com/YorubaNames"><i class="fa fa-twitter"></i></a>
                     </nav>
