updated URL links; added placeholder images

--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -57,12 +57,12 @@
                 <div class="collapse navbar-collapse navbar-main-collapse">
                     <ul class="nav navbar-nav navbar-right">   
                         <li><a href="/">{{message "lang.home"}}</a></li>
-                        <li><a href="/about">{{message "lang.about"}}</a></li>
-                        <li><a href="/donate">{{message "lang.donate"}}</a></li>
-                        <li><a href="/volunteer">{{message "lang.volunteer"}}</a></li>
-                        <li><a href="/blog">{{message "lang.blog"}}</a></li>
-                        <li><a href="/login">{{message "lang.logreg"}}</a></li>
-                        <li><a href="/contact">{{message "lang.contact"}}</a></li>
+                        <li><a href="/about-us">{{message "lang.about"}}</a></li>
+                        <li><a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story">{{message "lang.donate"}}</a></li>
+                        <li><a href="http://blog.yorubaname.com/?page_id=1972">{{message "lang.volunteer"}}</a></li>
+                        <li><a href="http://blog.yorubaname.com">{{message "lang.blog"}}</a></li>
+                        <!--li><a href="/login">{{message "lang.logreg"}}</a></li-->
+                        <li><a href="/contact-us">{{message "lang.contact"}}</a></li>
                     </ul>
                 </div>
             </div>                    
