--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -54,44 +54,44 @@
     	
             <div class="row">
                 
-                    <div class="col-sm-4">
-                		<h3>{{message "lang.name-of-day"}}</h3>
-                        <hr />
-                        <h4><a href="">Baratimileyi</a></h4>
-                        <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
-                        <a href="">Read more</a>
-                	</div>
+                <div class="col-sm-4">
+            		<h3>{{message "lang.name-of-day"}}</h3>
+                    <hr />
+                    <h4><a href="">Baratimileyi</a></h4>
+                    <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
+                    <a href="">Read more</a>
+            	</div>
 
-                    <div class="col-sm-4">
-                        <h3>{{message "lang.name-of-day"}}</h3>
-                        <hr />
-                        <h4>Baratimileyi</h4>
-                        <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
+                <div class="col-sm-4">
+                    <h3>{{message "lang.name-of-day"}}</h3>
+                    <hr />
+                    <h4>Baratimileyi</h4>
+                    <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
 
-                    </div>
+                </div>
 
-                    <div class="col-sm-4">
-                        <h3>{{message "lang.name-of-day"}}</h3>
-                        <hr />
-                        <h4>Baratimileyi</h4>
-                        <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
-                    </div>
+                <div class="col-sm-4">
+                    <h3>{{message "lang.name-of-day"}}</h3>
+                    <hr />
+                    <h4>Baratimileyi</h4>
+                    <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
+                </div>
                                       
             </div>
 
             <div class="row">
                 <div class="col-sm-12 text-center"><h3>Our key supporters</h3></div>
-                <div class="col-sm-2">&nbsp;</div>
-                <div class="col-sm-2">&nbsp;</div>
-                <div class="col-sm-2">&nbsp;</div>
-                <div class="col-sm-2">&nbsp;</div>
-                <div class="col-sm-2">&nbsp;</div>
-                <div class="col-sm-2">&nbsp;</div>
+                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
             </div>
 
-            <div class="row">
-                <div class="col-sm-4">&nbsp;</div>
-                <div class="col-sm-4">&nbsp;</div>
+            <div class="row" style="margin-top:40px">
+                <div class="col-sm-4"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
+                <div class="col-sm-4"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
                 <div class="col-sm-4">
                     <form class="" method="post">
                         <h4>YorubaName Newsletter</h4>
