changed image placeholders

--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -81,17 +81,17 @@
 
             <div class="row">
                 <div class="col-sm-12 text-center"><h3>Our key supporters</h3></div>
-                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="http://placehold.it/350x150"></div>
             </div>
 
             <div class="row" style="margin-top:40px">
-                <div class="col-sm-4"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
-                <div class="col-sm-4"><img class="img-responsive" src="https://placeimg.com/640/480/any/grayscale"></div>
+                <div class="col-sm-4"><img class="img-responsive" src="http://placehold.it/350x150"></div>
+                <div class="col-sm-4"><img class="img-responsive" src="http://placehold.it/350x150"></div>
                 <div class="col-sm-4">
                     <form class="" method="post">
                         <h4>YorubaName Newsletter</h4>
